--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,55 @@
+name: Build
+
 on: [push, pull_request, workflow_dispatch]
 
 jobs:
   build:
-    uses: zmkfirmware/zmk/.github/workflows/build-user-config.yml@main
+    runs-on: ubuntu-latest
+    container:
+      image: zmkfirmware/zmk-build-arm:stable
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        
+      - name: Cache west modules
+        uses: actions/cache@v4
+        with:
+          path: |
+            modules/
+            tools/
+            zephyr/
+            bootloader/
+          key: ${{ runner.os }}-build-${{ hashFiles('config/west.yml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+            
+      - name: West Init
+        run: west init -l config
+        
+      - name: West Update
+        run: west update
+        
+      - name: West Zephyr export
+        run: west zephyr-export
+        
+      - name: West Build (Left)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+        
+      - name: Rename Left artifact
+        run: cp build/zephyr/zmk.uf2 corne_left-nice_nano_v2.uf2
+        
+      - name: West Build (Right)
+        run: |
+          rm -rf build
+          west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+          
+      - name: Rename Right artifact
+        run: cp build/zephyr/zmk.uf2 corne_right-nice_nano_v2.uf2
+        
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: firmware
+          path: |
+            corne_left-nice_nano_v2.uf2
+            corne_right-nice_nano_v2.uf2
